--- a/TheMovieDatabase/Detail/View/VideoTableViewCell.xib
+++ b/TheMovieDatabase/Detail/View/VideoTableViewCell.xib
@@ -19,14 +19,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="430" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="22T-pQ-Rl0">
-                        <rect key="frame" x="0.0" y="0.0" width="70" height="99.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImage" translatesAutoresizingMaskIntoConstraints="NO" id="22T-pQ-Rl0">
+                        <rect key="frame" x="0.0" y="0.0" width="130" height="99.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="70" id="iEu-wc-R60"/>
+                            <constraint firstAttribute="width" constant="130" id="X3L-MU-uBa"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FaH-H0-HZz">
-                        <rect key="frame" x="78" y="8" width="344" height="83.5"/>
+                        <rect key="frame" x="138" y="8" width="284" height="83.5"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -50,4 +50,7 @@
             <point key="canvasLocation" x="211.59420289855075" y="116.51785714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="noImage" width="250" height="250"/>
+    </resources>
 </document>
