--- a/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
+++ b/TheMovieDatabase/Detail/View/CastCollectionViewCell.xib
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="448" height="79"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMw-3u-fnr">
-                                <rect key="frame" x="63" y="47" width="46.5" height="17"/>
+                                <rect key="frame" x="64" y="47" width="46.5" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="46.5" id="U6j-Fw-kPv"/>
                                 </constraints>
@@ -32,13 +32,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cja-ju-CXR">
-                                <rect key="frame" x="114.5" y="48" width="323.5" height="15.5"/>
+                                <rect key="frame" x="115.5" y="48" width="322.5" height="15.5"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iK-3o-Sp4">
-                                <rect key="frame" x="63" y="15" width="76" height="17"/>
+                                <rect key="frame" x="64" y="15" width="76" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="76" id="eFM-kr-vQf"/>
                                 </constraints>
@@ -47,13 +47,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0w-Fd-GfB">
-                                <rect key="frame" x="144" y="16" width="294" height="15.5"/>
+                                <rect key="frame" x="145" y="16" width="293" height="15.5"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImage" translatesAutoresizingMaskIntoConstraints="NO" id="L1g-cK-Nvb">
-                                <rect key="frame" x="0.0" y="0.0" width="53" height="79"/>
+                                <rect key="frame" x="1" y="0.0" width="53" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="53" id="ofR-1J-aBN"/>
                                 </constraints>
@@ -63,7 +63,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="T0w-Fd-GfB" secondAttribute="trailing" constant="10" id="KM8-ai-Pun"/>
                             <constraint firstItem="cja-ju-CXR" firstAttribute="centerY" secondItem="KMw-3u-fnr" secondAttribute="centerY" id="PVX-Mq-qxk"/>
-                            <constraint firstItem="L1g-cK-Nvb" firstAttribute="leading" secondItem="gU8-hW-VIs" secondAttribute="leading" id="Syn-7d-kTG"/>
+                            <constraint firstItem="L1g-cK-Nvb" firstAttribute="leading" secondItem="gU8-hW-VIs" secondAttribute="leading" constant="1" id="Syn-7d-kTG"/>
                             <constraint firstItem="7iK-3o-Sp4" firstAttribute="top" secondItem="gU8-hW-VIs" secondAttribute="top" constant="15" id="UdH-Qc-gAP"/>
                             <constraint firstAttribute="bottom" secondItem="L1g-cK-Nvb" secondAttribute="bottom" id="WKj-Ha-0mZ"/>
                             <constraint firstAttribute="trailing" secondItem="cja-ju-CXR" secondAttribute="trailing" constant="10" id="d25-hM-BM8"/>
