--- a/TheMovieDatabase/Detail/Controller/DetailVideoViewController.xib
+++ b/TheMovieDatabase/Detail/Controller/DetailVideoViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoViewController" customModule="TheMovieDatabase" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailVideoViewController" customModule="TheMovieDatabase" customModuleProvider="target">
             <connections>
                 <outlet property="videoPlayerContainer" destination="kg0-pT-R2D" id="roA-Ht-0De"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
