--- a/TheMovieDatabase/Detail/Controller/DetailViewController.xib
+++ b/TheMovieDatabase/Detail/Controller/DetailViewController.xib
@@ -67,7 +67,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="YOk-gn-7HB">
-                                            <rect key="frame" x="5" y="5" width="40.000000000000057" height="40.000000000000057"/>
+                                            <rect key="frame" x="5" y="5" width="40" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="E1R-Hk-57I"/>
                                                 <constraint firstAttribute="width" constant="40" id="lMc-yi-2AP"/>
